
* `summarise` now works iteratively so that later columns can refer to earlier.  (Thanks to Jim Hester, #44)

* `take` makes it easy to subset along an arbitrary dimension.

* Improved documentation thanks to patches from Tim Bates.

* New parameter `.id` to `rdply()` that specifies the name of the index column. (Thanks to Kirill Müller, #142)

PARALLEL PLYR

* `**ply` gains a `.paropts` argumetns, a list of options that is passed onto `foreach` for controlling parallel computation.

* `*_ply` now accepts `.parallel` argument to enable parallel processing. (Fixes #60)

* Progress bars are disabled when using parallel plyr (Fixes #32)

PERFORMANCE IMPROVEMENTS

* `a*ply`: 25x speedup when indexing array objects, 3x speedup when indexing data frames.  This should substantially reduce the overhead of using `a*ply`

* `d*ply` subsetting has been considerably optimised: this will have a small impact unless you have a very large number of groups, in which case it will be considerably faster.

* `idata.frame`: Subsetting immutable data frames with `[.idf` is now
  faster (Peter Meilstrup)

* `quickdf` is around 20% faster

* `split_indices`, which powers much internal splitting code (like `vaggregate`, `join` and `d*ply`) is about 2x faster.  It was already incredible fast ~0.2s for 1,000,000 obs, so this won't have much impact on overall performance

BUG FIXES

* `*aply` functions now bind list mode results into a list-array (Peter Meilstrup)

* `*aply` now accepts 0-dimension arrays as inputs. (#88)

* `*dply` now deals better with matrix results, converting them to data frames, rather than vectors. (Fixes #12)

* `d*ply` will now preserve factor levels input if `drop = FALSE` (#81)

* `join` works correctly when there are no common rows (Fixes #74), or when one input has no rows (Fixes #48). It also consistently orders the columns: common columns, then x cols, then y cols (Fixes #40).
